<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/github_bg"
    tools:context=".activity.DetailUserActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="12dp"

        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="15dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/company_text"
                android:textAlignment="center"
                android:textColor="@color/github_grey_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/location_text"
                android:textAlignment="center"
                android:textColor="@color/github_grey_text" />

            <include
                android:id="@+id/user_info"
                layout="@layout/card_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp" />


        </LinearLayout>
    </ScrollView>

    <include layout="@layout/footer" android:id="@+id/footer"/>

</androidx.constraintlayout.widget.ConstraintLayout>