<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/repo_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_count_value"
                android:textColor="@color/github_grey_text"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/github_grey_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/follower_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_count_value"
                android:textColor="@color/github_grey_text"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/github_grey_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/following_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_count_value"
                android:textColor="@color/github_grey_text"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>